--- a/ECS_spectrum.ipynb
+++ b/ECS_spectrum.ipynb
@@ -2028,10 +2028,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = 1\n",
+    "print(test)"
+   ]
   },
   {
    "cell_type": "code",
